Prevent buttons from breaking on small screens

--- a/knopf.css
+++ b/knopf.css
@@ -147,7 +147,6 @@
   text-decoration-line: var(--knopf-text-decoration-line);
   text-transform: var(--knopf-text-transform);
   transition: var(--knopf-transition);
-  white-space: nowrap;
 }
 
 /* ==========================================================================
